# discord-soundboard-rs

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  config.json  deploypi  package.json  rollup.config.js
.cargo/: config.toml
client/: api.js  constants.js  debounce.js  filtering.js  index.js  notifications.js  store.js
client/components/: button.svelte  header.svelte  index.svelte  nav-item.svelte  notifications.svelte  track-category.svelte  track.svelte  tracks-filter-container.svelte  tracks-filter-input.svelte  tracks.svelte
client/components/header/: categories.svelte  index.svelte  join-button.svelte  nav-item.svelte  tracks-filter-input.svelte
client/components/track/: categories.svelte  category.svelte  index.svelte  progress-bar.svelte
client/lib/: api.js
config/collections/: favorites.json
public/: index.html
src/: main.rs  settings.rs
src/api/: handlers.rs  mod.rs  response.rs  routes.rs
src/bot/: bot.rs  collections.rs  guilds.rs  mod.rs  playback.rs  tracks.rs
src/discord/: bot.rs  mod.rs
