[package]
name = "discord-soundboard-rs"
version = "0.1.0"
authors = ["Johan Engstrand <johan@engstrand.nu>", "Fredrik Engstrand <fredrik@engstrand.nu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
futures = "0.3.8"
warp = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
config = "0.10"
lazy_static = "1.4"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "current"

[dependencies.serenity]
default-features = false
features = ["client", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "current"

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "serve"]
