[package]
name = "discord-soundboard-rs"
version = "0.1.0"
authors = ["Johan Engstrand <johan@engstrand.nu>", "Fredrik Engstrand <fredrik@engstrand.nu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
futures = "0.3.8"
warp = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
config = "0.10"
lazy_static = "1.4"
openssl = { version = "0.10.29", features = ["vendored"] }

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "current"

[dependencies.serenity]
version = "0.10.2"
features = ["client", "gateway", "cache", "http", "model", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "current"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
